# dstack-vpc

./: .gitmodules  Cargo.toml  Dockerfile  README-mesh.md  README.md  build-image.sh
configs/: headscale_config.yaml  nginx-client-proxy.conf  nginx-server-proxy.conf.template
examples/: deploy-cluster.js  docker-compose.yaml  vpc-server.yaml
examples/mongo-cluster/: .gitignore  README.md  deploy-cluster.js  deploy.js  mongo-app.yaml  mongodb.yaml  utils.js  vpc-server-placeholder.yaml  vpc-server.yaml
scripts/: auto-entry.sh  compute-pubkey.py  detect-env.sh  functions.sh  generate-compose.sh  healthcheck.sh  load-modules.sh  mesh-serve.sh  metrics-aggregator.js  monitor-headscale.sh  monitor-vpc-connectivity.sh  test-functions.sh  vpc-node-entry.sh  vpc-node-setup.sh  vpc-server-entry.sh
service-mesh/: .gitignore  Cargo.toml  Dockerfile  README.md  build-image.sh  dstack-mesh.toml  extract-modules.sh
service-mesh/example/: docker-compose.yml
service-mesh/fs/: client-proxy.conf  nginx.conf  nginx.conf.template  server-proxy.conf.template  startup.sh  supervisord.conf
service-mesh/service-mesh/: dstack-mesh.toml
service-mesh/service-mesh/src/: config.rs  main.rs
service-mesh/src/: client.rs  config.rs  main.rs  server.rs
vpc/: README.md
vpc-api-server/: Dockerfile  main.go
vpc/nodes/: mongo-app.yml  mongodb.yml
vpc/server/: docker-compose.yml
vpc/server/api-server/: build-image.sh  main.go
vpc/shared/: test.sh
vpc/vpc-node/: docker-compose.yml
vpc/vpc-server/: docker-compose.yml
vpc/vpc-server/api-server/: entrypoint.sh  go.mod
