[package]
name = "dstack-mesh"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocket = { workspace = true, features = ["mtls"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
load_config.workspace = true
ra-tls.workspace = true
ra-rpc = { workspace = true, features = ["client", "rocket"] }
git-version.workspace = true
url.workspace = true
reqwest.workspace = true
futures-util.workspace = true
bytes.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
urlencoding.workspace = true
x509-parser.workspace = true
dstack-types.workspace = true
fs-err.workspace = true
